# agentic-aiops-vault

./: .cache_ggshield  .gitignore  steps.md
.github/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-vault-pki-mcp-tools/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
terraform/: .terraformignore  intermediate.cert.pem  main.tf  outputs.tf  pki_intermediate.csr  providers.tf  root_2023_ca.crt  terraform.tf  variables.tf
vault-agent/: ERROR_FIX_SUMMARY.md  README.md  STREAMING_IMPLEMENTATION_SUMMARY.md  main.py  pyproject.toml  test_fix_verification.py  test_streamlit_streaming.py  verify_streaming_integration.py
vault-agent/docs/: streaming_usage.md
vault-agent/examples/: streaming_example.py
vault-agent/src/: __init__.py
vault-agent/src/agent/: __init__.py  vault_pki_agent.py
vault-agent/src/models/: __init__.py  certificate.py  query.py
vault-agent/src/ui/: __init__.py  example_prompts.py  streamlit_app.py
vault-agent/tests/: __init__.py  test_agent.py
vault-mcp-server/: CERTIFICATE_LIST_IMPLEMENTATION.md  README.md  main.py  pyproject.toml
vault-mcp-server/src/: __init__.py
vault-mcp-server/src/models/: __init__.py  certificate.py  cloudwatch.py  pki_engine.py
vault-mcp-server/src/services/: __init__.py  certificate_hierarchy.py  certificate_parser.py  cloudwatch_client.py  compound_expression_parser.py  log_filter.py  pattern_matcher.py  simplified_certificate_builder.py  vault_client.py
vault-mcp-server/src/tools/: __init__.py  filter_logs.py  list_certificates.py  list_pki_engines.py
vault-mcp-server/tests/integration/: test_list_certificates_format.py
vault-mcp-server/tests/unit/: test_simplified_certificate_builder.py
(+19 files in other folders)
